# AiRT

./: .gitignore  README.md  main.py  pyproject.toml  removeDuplicates.py  transcriber.py
example_data/oxford_CPR/: gptresponse_summarized_transcript_2011-03-01-robinson-kant-8_The discipline of reason The paralogisms and Antinomies of Pure Reason._api.pkl  structured_transcript_2011-03-01-robinson-kant-1_Just what is Kant's project_api.md  structured_transcript_2011-03-01-robinson-kant-2_The broader philosophical context_api.md  structured_transcript_2011-03-01-robinson-kant-3_Space, time and the Analogies of Experiences_api.md  structured_transcript_2011-03-01-robinson-kant-4_How are a priori synthetic judgements possible_api.md  structured_transcript_2011-03-01-robinson-kant-5_Idealisms and their refutations_api.md  structured_transcript_2011-03-01-robinson-kant-6_Concepts, judgement and the Transcendental Deduction of the Categories_api.md  structured_transcript_2011-03-01-robinson-kant-7_The Self and the Synthetic Unity of Apperception_api.md  structured_transcript_2011-03-01-robinson-kant-8_The discipline of reason The paralogisms and Antinomies of Pure Reason._api.md  summarized_transcript_2011-03-01-robinson-kant-1_Just what is Kant's project_api.md  summarized_transcript_2011-03-01-robinson-kant-2_The broader philosophical context_api.md  summarized_transcript_2011-03-01-robinson-kant-3_Space, time and the Analogies of Experiences_api.md  summarized_transcript_2011-03-01-robinson-kant-4_How are a priori synthetic judgements possible_api.md  summarized_transcript_2011-03-01-robinson-kant-5_Idealisms and their refutations_api.md  summarized_transcript_2011-03-01-robinson-kant-6_Concepts, judgement and the Transcendental Deduction of the Categories_api.md  summarized_transcript_2011-03-01-robinson-kant-7_The Self and the Synthetic Unity of Apperception_api.md  summarized_transcript_2011-03-01-robinson-kant-8_The discipline of reason The paralogisms and Antinomies of Pure Reason._api.md  transcript_2011-03-01-robinson-kant-1_Just what is Kant's project_api.txt  transcript_2011-03-01-robinson-kant-2_The broader philosophical context_api.txt  transcript_2011-03-01-robinson-kant-3_Space, time and the Analogies of Experiences_api.txt  transcript_2011-03-01-robinson-kant-4_How are a priori synthetic judgements possible_api.txt  transcript_2011-03-01-robinson-kant-5_Idealisms and their refutations_api.txt  transcript_2011-03-01-robinson-kant-6_Concepts, judgement and the Transcendental Deduction of the Categories_api.txt  transcript_2011-03-01-robinson-kant-7_The Self and the Synthetic Unity of Apperception_api.txt  transcript_2011-03-01-robinson-kant-8_The discipline of reason The paralogisms and Antinomies of Pure Reason._api.txt
lib/: fileHandler.py
src/: __main__.py
src/AI_research_tools/: CommandRunners.py  FileFilters.py  PDFContentExtractor.py  Types.py  UI.py  __main__.py  fileFetcher.py  fileHandler.py  helpers.py  main.py  price.py  summarizer.py  textStructurer.py  transcriber.py  voiceRestorer.py
src/AI_researcher/: PDFContentExtractor.py  __main__.py  fileHandler.py  price.py  summarizer.py  transcriber.py
