[tool.poetry]
name = "AI_research_tools"
readme = "README.md"
version = "0.0.1dev1"
description = "Tools for processing academic resources with AI"
authors = ["Severin Gartland <sfgartland@hotmail.com>"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.13" # TODO Picked a random one, update
pydub = "*"
openai = "*"
rich = "*"
typer = { version = "*", extras = ["all"]}
loguru = "*"
pytube = "*"
regex = "*"

[tool.poetry.group.localTranscription]
optional = true

[tool.poetry.group.localTranscription.dependencies]
openai-whisper = "*"

[tool.poetry.group.pdfProcessing]
optional = true

[tool.poetry.group.pdfProcessing.dependencies]
marker-pdf = {git = "https://github.com/VikParuchuri/marker"}
python-magic-bin  = "*" # Needed for marker-pdf to work properly


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[tool.poetry.scripts]
AI_research_tools = "AI_research_tools.main:app"
