[tool.poetry]
name = "AI_research_tools"
readme = "README.md"
version = "0.0.2dev1"
description = "Tools for processing academic resources with AI"
authors = ["Severin Gartland <sfgartland@hotmail.com>"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.10" # TODO Picked a random one, update
pydub = "*"
openai = "*"
rich = "*"
typer = { version = "*", extras = ["all"]}
loguru = "*"
pytube = "*"
regex = "*"
ffmpeg-python = "*"
moviepy = "*"
voicefixer = "^0.1.3"

[tool.poetry.extras]
pdfprocessing = ["pdfprocessing"]
localtranscription = ["localtranscription"]

[tool.poetry.group.localtranscription]
optional = true

[tool.poetry.group.localtranscription.dependencies]
openai-whisper = "*"

[tool.poetry.group.pdfprocessing]
optional = true

[tool.poetry.group.pdfprocessing.dependencies]
marker-pdf = {git = "https://github.com/VikParuchuri/marker"}
python-magic-bin  = "*" # Needed for marker-pdf to work properly


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
ipykernel = "^6.28.0"

[tool.poetry.scripts]
AI_research_tools = "AI_research_tools.main:app"
airt = "AI_research_tools.main:app"
